# Image_Processor

./: BMPFile.cpp  BMPFile.h  CMakeLists.txt  Image.cpp  Image.h  Interface.cpp  Interface.h  Parser.cpp  Parser.h  image_processor.cpp  readme.md
Filters/: CropFilter.cpp  CropFilter.h  EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  Filter.cpp  Filter.h  Filters_info  GaussianBlurFilter.cpp  GaussianBlurFilter.h  GrayscaleFilter.cpp  GrayscaleFilter.h  MatrixFilter.cpp  MatrixFilter.h  NegativeFilter.cpp  NegativeFilter.h  SharpeningFilter.cpp  SharpeningFilter.h  TwirlFilter.cpp  TwirlFilter.h
IO/: IO_info  Reader.cpp  Reader.h  Writer.cpp  Writer.h
Tests/: BitwiseFileComprassion.h  FiltersTestWithBMPImage.cpp  FiltersTestWithTestImage.cpp  InterfaceTest.cpp  ParserTest.cpp  ReaderTest.cpp  TestImage.cpp  TestImage.h  Tests_info  WriterTest.cpp
